# AlgoBank

./: Dockerfile  README.md  docker-compose.yml  requirements.txt
.devcontainer/: Dockerfile  devcontainer.json  devcontasiner.json  docker-compose.yml
app/: bruteforce.py  pyproject.toml
app/algorithme/: algorithme.py
app/bruteforce/: action.json  best_combination.json  bruteforce.py
